Fix white space at bottom of article details page

--- a/src/articleDescription/ArticleDescription.css
+++ b/src/articleDescription/ArticleDescription.css
@@ -1,7 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #272700;
+.article-description {
+  height: 91vh;
 }
 
 .article-description-container {
